2006-10-27 Max Derhak
  * Added CIccTagCurve::SetGamma member function
  * Added validation check for single entry (gamma) curves to CIccTagLut8
    and CIccTagLut16

2006-10-10 Rohit Patil
  * Added IsIdentity() function to the CIccCurve and CIccMatrix classes which returns true
    if they are identity
  * Modified the Xform objects in the CMM to use the IsIdentity() function. 
    Now CIccXform::Apply() will not apply the curves or the matrix if 
    they are identity, to improve the CMM performance

2006-10-06 Max Derhak
  * Added CmdLine tool iccStripUnkownTags to remove tags not defined
    in the Icc Specification from a profile.

2006-07-31  Max Derhak
  * Fixed bug in CIccTagChromaticity::Validate() to make comparisons
	  with fixed floating point encoding rather than IEEE encoding

2006-07-13  Max Derhak
  * Fixed bug with displaying icSigPerceptualRenderingIntentGamutTag
    tag's name correctly
  * Added icVectorApplyMatrix3x3() to IccUtil

2006-06-09  Max Derhak
  * Added concept of Device Lab and XYZ separate from PCS Lab
    and XYZ.  Encoding for these color spaces by devices is not
    defined by the ICC specification.

2006-05-09  Max Derhak

  * Cleanup to get things to work with VC6.
	
	* Reformated text replacing tabs with spaces.

2006-03-24  Joseph Goldstone  <joseph@Cloudbase.local>

	* Add a cut-and-paste of ab_lib_id3.m4 from Oskar Liljeblad
	  (oskar@osk.mine.nu) as published in the autoconf archive,
	  downloadable at http://autoconf-archive.cryp.to/ac_lib_id3.m4,
	  to produce AC_LIB_TIFF.  Use the resulting TIFF_CPPFLAGS,
	  TIFF_LDFLAGS and TIFF_LIBS in the Makefile.am file in the
	  Tools/CmdLine/IccApplyProfile subdir.

	* Add a dist-hook target in the top-level Makefile.am that gets
	  rid of any .DS_Store files.

	* Correct capitalization of SUBDIRS in Tools/CmdLine/Makefile.am
	  so that we have a chance of running on Red Hat et al.

2006-02-18  Joseph Goldstone  <joseph@Cloudbase.local>
